grammar.txt
program        → declaration* EOF ;

declaration    → varDecl
               | statement ;

statement      → exprStmt
                | forStmt
                | ifStmt
                | printStmt
                | whileStmt
                | block ;
			   
exprStmt       → expression ";" ;
forStmt       ->  "for" "(" (varDecl | exprStmt | ";" )
                  expression? ";"
                  expression? ")" statement ;
ifStmt        ->  "if" "(" expression ")" statement
                  ( "else" statement )? ;
printStmt      → "print" expression ";" ;
whileStmt     -> "while" "(" expression ")" statement ;
block     ->  "{" declaration* "}" ;  
         
varDecl 	->	"var" IDENTIFIER ( "=" expression )? ";" ;

expression     → assignment ;
assignment	->	IDENTIFIER "=" assignment | logic_or ;
logic_or    ->  logic_and ( "or" logic_and)* ;
logic_and   ->  ternary ( "and" ternary)* ;
ternary		->	equality ("?" expression ":" ternary)? ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | primary ;
primary        -> 	"true" | "false" | "nil"
					| NUMBER | STRING
					| "(" expression ")"
					| IDENTIFIER;
